--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -7,16 +7,16 @@
   name = "Home"
   url = "#about"
   weight = 10
+#
+# [[main]]
+#   name = "Posts"
+#   url = "#posts"
+#   weight = 20
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+# [[main]]
+#   name = "Projects"
+#   url = "#projects"
+#   weight = 30
 
 [[main]]
   name = "Publications"
@@ -24,9 +24,20 @@
   weight = 40
 
 [[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 50
+
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
+
+[[main]]
+  name = "CV"
+  url = "/files/cv.pdf"
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
