fixed a couple things

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -6,7 +6,7 @@
 [[main]]
   name = "Home"
   url = "#about"
-  weight = 10
+  weight = 1
 #
 # [[main]]
 #   name = "Posts"
@@ -21,22 +21,28 @@
 [[main]]
   name = "Publications"
   url = "#featured"
-  weight = 40
+  weight = 2
+
+[[main]]
+  name = "Service"
+  url = "#service"
+  weight = 3
 
 [[main]]
   name = "Experience"
   url = "#experience"
-  weight = 50
+  weight = 4
 
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 5
+
 
 [[main]]
   name = "CV"
-  url = "/files/cv.pdf"
+  url = "files/cv.pdf"
   weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
