--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -39,6 +39,10 @@
   url = "#contact"
   weight = 5
 
+[[main]]
+  name = "Media Journalists Study"
+  url = "#media"
+  weight = 6
 
 [[main]]
   name = "CV"
