updated CV to nice latex template

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -46,12 +46,12 @@
 
 [[main]]
   name = "CV"
-  url = "files/cv.pdf"
+  url = "files/nwarford_cv.pdf"
   weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
 # [[main]]
 #    name = "CV"
-#    url = "media/cv.pdf"
+#    url = "media/nwarford_cv.pdf"
 #    weight = 70
