--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "nwarford@cs.umd.edu"
+email = "nwarford@oberlin.edu"
 phone = ""
 
 # Address
@@ -112,7 +112,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
- # {icon = "email", icon_pack = "fab", name = "nwarford@cs.umd.edu", link = "mailto:nwarford@cs.umd.edu"},
+ # {icon = "email", icon_pack = "fab", name = "nwarford@oberlin.edu", link = "mailto:nwarford@oberlin.edu"},
 #  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
